--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,11 +25,11 @@
     <nav>
     	<div id="menu">
     		<div class="container">
-    			<div class="row navbar">
+    			<div class="row">
     				<div class="col-xs-2">
     					<img src="img/logo_toms.png">
     				</div>
-    				<div class="col-md-8 col-offset-2">
+    				<div id="navbar" class="col-md-8 col-offset-2">
     					<a href="index.html" alt="">Home</a>
     					<a href="lifestyle.html" alt="">Lifestyle</a>
     					<a href="blog.html" alt="">Blog</a>
@@ -43,7 +44,13 @@
 
 
 
-
+    <footer>
+    	<div class="container">
+    		<div class="row">
+    			<p>Copyright @ <a href="http://toms.com">toms.com</a></p>
+    		</div>
+    	</div>
+    </footer>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
