--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Toms customer website</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
     		<div class="container">
     			<div class="row">
     				<div class="col-xs-2">
-    					<img src="img/logo_toms.png">
+    					<img src="img/toms_logo.png">
     				</div>
     				<div id="navbar" class="col-md-8 col-offset-2">
     					<a href="index.html" alt="">Home</a>
