--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<h3>Lifestyle</h3>
 			</div>
 			<div class="block col-md-offset-2 col-md-4 ">
-				<img src="image/lifestyle.png">
+				<img src="image/blog.png">
 				<h3>Blog</h3>
 			</div>
 		</div>
