made dropdown menu in jquery

--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
     					<img src="img/toms_logo.png">
     				</div>
     				<div id="navbar" class="col-md-8 col-offset-2">
-    					<a href="index.html" alt="">Home</a>
-    					<a href="lifestyle.html" alt="">Lifestyle</a>
-    					<a href="blog.html" alt="">Blog</a>
-    					<a href="contact.html" alt="">Contact</a>
+                    <ul> 
+    					<li class ="dropdown"><a href="index.html" alt="">Home</a>
+                            <ul class="sub-menu">
+                                <li><a href="lifestyle.html" alt="">First dropdown</a></li>
+                                <li><a href="blog.html" alt="">Second dropdown</a></li>
+                            </ul>
+                        </li>
+    					<li><a href="lifestyle.html" alt="">Lifestyle</a></li>
+    					<li><a href="blog.html" alt="">Blog</a></li>
+    					<li><a href="contact.html" alt="">Contact</a></li>
+                    </ul> 
     				</div>
     			</div>
     		</div>
@@ -72,5 +79,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/function.js"></script>
   </body>
 </html>
