Accidently deleted blog.html, changed blog1.html into becoming blog.html again

--- a/blog.html
+++ b/blog.html
@@ -21,43 +21,43 @@
   </head>
   <body>
 
-  	 <!--Header -->
+     <!--Header -->
     <nav>
-    	<div id="menu">
-    		<div class="container">
-    			<div class="row">
-    				<div class="col-xs-2">
-    					<img src="img/toms_logo.png">
-    				</div>
-    				<div id="navbar" class="col-md-8 col-offset-2">
+        <div id="menu">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-2">
+                        <img src="img/toms_logo.png">
+                    </div>
+                    <div id="navbar" class="col-md-8 col-offset-2">
                     <ul> 
-    					<li class ="dropdown"><a href="index.html" alt="">Home</a>
+                        <li class ="dropdown"><a href="index.html" alt="">Home</a>
                             <ul class="sub-menu">
                                 <li><a href="lifestyle.html" alt="">First dropdown</a></li>
                                 <li><a href="blog.html" alt="">Second dropdown</a></li>
                             </ul>
                         </li>
-    					<li><a href="lifestyle.html" alt="">Lifestyle</a></li>
-    					<li><a href="blog.html" alt="">Blog</a></li>
-    					<li><a href="contact.html" alt="">Contact</a></li>
+                        <li><a href="lifestyle.html" alt="">Lifestyle</a></li>
+                        <li><a href="blog.html" alt="">Blog</a></li>
+                        <li><a href="contact.html" alt="">Contact</a></li>
                     </ul> 
-    				</div>
-    			</div>
-    		</div>
-    	</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </nav>
 
 <main>
-	<h1>Blog</h1>
-    <p>The blog will come here as soon as we'll have our first items!</p>
+    <h1>Blog</h1>
+    <p>This spot is reserved to become the Blog.</p>
 
 
     <footer>
-    	<div class="container">
-    		<div class="row">
-    			<p>Copyright @ <a href="http://toms.com">toms.com</a></p>
-    		</div>
-    	</div>
+        <div class="container">
+            <div class="row">
+                <p>Copyright @ <a href="http://toms.com">toms.com</a></p>
+            </div>
+        </div>
     </footer>
 
 
