page and css changes and add content

--- a/blog.html
+++ b/blog.html
@@ -48,10 +48,43 @@
     </nav>
 
 <main>
-    <h1>Blog</h1>
-    <p>This spot is reserved to become the Blog.</p>
-
-
+     <div class="container">
+            <div class="row">
+    <center><br><br><br><br><p><h1>Blog</h1></p></center>
+           <div class="block1 col-md-offset-1 col-md-7 ">
+            <img src="image/tomskids.jpg">
+              </div>
+              <div class="block2 col-md-offset-1 col-md-5 ">
+            <h2>Giving free TOMS shoes to the community in Mexico</h2>
+             <h5><p>John draw real poor on call my from. May she mrs furnished discourse extremely. Ask doubt noisy shade guest did built her him. Ignorant repeated hastened it do. Consider bachelor he yourself expenses no. Her itself active giving for expect vulgar months. Discovery commanded fat mrs remaining son she principle middleton neglected. Be miss he in post sons held. No tried is defer do money scale rooms.</p></h5>
+              </div>
+  
+            </div>
+        </div>
+  <div class="container">
+            <div class="row">
+           <div class="block1 col-md-offset-1 col-md-7 ">
+            <img src="image/tomsbag.jpg">
+              </div>
+              <div class="block2 col-md-offset-1 col-md-5 ">
+            <h2>TOMS bag giveaway!</h2>
+             <h5><p>John draw real poor on call my from. May she mrs furnished discourse extremely. Ask doubt noisy shade guest did built her him. Ignorant repeated hastened it do. Consider bachelor he yourself expenses no. Her itself active giving for expect vulgar months. Discovery commanded fat mrs remaining son she principle middleton neglected. Be miss he in post sons held. No tried is defer do money scale rooms.</p></h5>
+              </div>
+  
+            </div>
+        </div>
+  <div class="container">
+            <div class="row">
+   <div class="block1 col-md-offset-1 col-md-7 ">
+            <img src="image/tomsfriends.png">
+              </div>
+              <div class="block2 col-md-offset-1 col-md-5 ">
+            <h2>Subscribe for our mailing-list</h2>
+             <h5><p>John draw real poor on call my from. May she mrs furnished discourse extremely. Ask doubt noisy shade guest did built her him. Ignorant repeated hastened it do. Consider bachelor he yourself expenses no. Her itself active giving for expect vulgar months. Discovery commanded fat mrs remaining son she principle middleton neglected. Be miss he in post sons held. No tried is defer do money scale rooms.</p></h5>
+              </div>
+  
+            </div>
+        </div>
     <footer>
         <div class="container">
             <div class="row">
