--- a/lifestyle.html
+++ b/lifestyle.html
@@ -48,10 +48,45 @@
     </nav>
 
 <main>
-	<h1>Lifestyle</h1>
-	<p> People will be interviewed here about their lifestyle when wearing Toms.</p>
+<br><br>
+<div class="container">
+		<div class="row">
+			<div class="block1 col-md-offset-1 col-md-4 ">
+				<img src="image/tomsblogger1.jpg">
+				<br><br>
+				<img src="image/tomsblogger.jpg">
+				<h6>"Sandra wears the red/white TOMS shoe"</h6>
+			</div>
+			<div class="block1 col-md-offset-1 col-md-4 ">
+				<h2>Sandra loves TOMS!</h2>
+				<h5><p>Name were we at hope. Remainder household direction zealously the unwilling bed. Lose and gay ham sake met that. Stood her place one ten spoke yet. Head case knew ever set why over. Marianne returned of peculiar replying in moderate. Roused get enable garret estate old county. Entreaties you devonshire law dissimilar terminated.</p>
 
+				<p>Mind what no by kept. Celebrated no he decisively thoroughly. Our asked point her she seems. New plenty she horses parish design you. Stuff sight equal of my woody. Him children bringing goodness suitable she entirely put far daughter.</p></h5>
+			</div>
+		</div>
+	</div>
+<div class="container">
+		<div class="row">
+			<div class="block1 col-md-offset-1 col-md-4 ">
+				<h2>TOMS changed my life</h2>
+				<h5><p>As am hastily invited settled at limited civilly fortune me. Really spring in extent an by. Judge but built gay party world. Of so am he remember although required. Bachelor unpacked be advanced at. Confined in declared marianne is vicinity.</p>
 
+				<p>You disposal strongly quitting his endeavor two settling him. Manners ham him hearted hundred expense. Get open game him what hour more part. Adapted as smiling of females oh me journey exposed concern. Met come add cold calm rose mile what. Tiled manor court at built by place fanny. Discretion at be an so decisively especially. Exeter itself object matter if on mr in.</p></h5>
+			</div>
+			<div class="block1 col-md-offset-1 col-md-5 ">
+				<img src="image/tomsblogger4.jpg">
+				<h6>Danny Russ is a soccer player from Arsenal</h6>
+			</div>
+			<div class="block1 col-md-offset-1 col-md-5 ">
+			<img src="image/tomsblogger5.jpg">
+				<h6>Danny wears the blue/white stripe TOMS shoe</h6></div>
+				<div class="block1 col-md-offset-1 col-md-4 ">
+				<h2>"Live ECO"</h2>
+			
+			</div>
+		</div>
+	</div>
+	
     <footer>
     	<div class="container">
     		<div class="row">
