--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 </main>
 
     <footer>
-    	<div class="container">
+    	<div id="sticky" class="container">
     		<div class="row">
     			<p>Copyright @ <a href="http://toms.com">toms.com</a></p>
     		</div>
